Corrige erro no cálculo de deltas quadrados.

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -260,13 +260,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Transformação 2\n",
-    "f = lambda df, i, col_name: np.square(df.loc[i, col_name] - df.loc[i - 1, col_name])\n",
-    "utils.save_tranformed_df(\"dados/delta_quadrado.csv\", df, f)"
+    "f = lambda df, i, col_name: (df.loc[i, col_name] - df.loc[i - 1, col_name]) - (df.loc[i - 1, col_name] - df.loc[i - 2, col_name])\n",
+    "utils.save_tranformed_df(\"dados/delta_quadrado.csv\", df, f, skip=[0, 1])"
    ]
   },
   {
@@ -322,17 +322,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_20564\\4264728250.py:2: RuntimeWarning: divide by zero encountered in log\n",
-      "  f = lambda df, i, col_name: np.square(np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name]))\n",
-      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_20564\\4264728250.py:2: RuntimeWarning: invalid value encountered in log\n",
-      "  f = lambda df, i, col_name: np.square(np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name]))\n"
+      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_8528\\4120892083.py:2: RuntimeWarning: divide by zero encountered in log\n",
+      "  f = lambda df, i, col_name: (np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name])) - (np.log(df.loc[i - 1, col_name]) - np.log(df.loc[i - 2, col_name]))\n",
+      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_8528\\4120892083.py:2: RuntimeWarning: invalid value encountered in log\n",
+      "  f = lambda df, i, col_name: (np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name])) - (np.log(df.loc[i - 1, col_name]) - np.log(df.loc[i - 2, col_name]))\n"
      ]
     }
    ],
    "source": [
     "# Tranformação 5\n",
-    "f = lambda df, i, col_name: np.square(np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name]))\n",
-    "utils.save_tranformed_df(\"dados/delta_log_quadrado.csv\", df, f)"
+    "f = lambda df, i, col_name: (np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name])) - (np.log(df.loc[i - 1, col_name]) - np.log(df.loc[i - 2, col_name]))\n",
+    "utils.save_tranformed_df(\"dados/delta_log_quadrado.csv\", df, f, skip=[0, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O código gera corretamente as versões transformadas,\n",
+    "mas fizeram-se algumas mudanças manuais nos arquivos posteriormente.\n",
+    "\n",
+    "Removeram-se as entradas anteriores a out/2003, pois o maior lag que vai se utilizar é de 3."
    ]
   }
  ],
