Aprimora arquivos csv criados por 'trasnformations.ipynb'.

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O objetivo do código aqui é realizar manipulações nos dados.\n",
+    "O objetivo do código aqui é realizar manipulações nos dados\n",
+    "com o objetivo de torná-los estacionários.\n",
     "\n",
     "Manipulações realizadas:\n",
     "\n",
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,38 +250,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>selic</th>\n",
+       "      <th>m1</th>\n",
+       "      <th>m2</th>\n",
+       "      <th>m3</th>\n",
+       "      <th>m4</th>\n",
+       "      <th>ibovespa</th>\n",
+       "      <th>cambio</th>\n",
+       "      <th>ind_varejo</th>\n",
+       "      <th>ind_varejo_ampl</th>\n",
+       "      <th>...</th>\n",
+       "      <th>prod_veiculos</th>\n",
+       "      <th>prod_onibus</th>\n",
+       "      <th>result_primario</th>\n",
+       "      <th>epu_br</th>\n",
+       "      <th>epu_usa</th>\n",
+       "      <th>ind_conf_cons</th>\n",
+       "      <th>rendimento</th>\n",
+       "      <th>crb_cmdt</th>\n",
+       "      <th>crb_food</th>\n",
+       "      <th>crb_metal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>jan/03</td>\n",
+       "      <td>25.145161</td>\n",
+       "      <td>94977783</td>\n",
+       "      <td>391237088</td>\n",
+       "      <td>696054502</td>\n",
+       "      <td>810272451</td>\n",
+       "      <td>10941.09</td>\n",
+       "      <td>3.4384</td>\n",
+       "      <td>16.44619</td>\n",
+       "      <td>18.88421</td>\n",
+       "      <td>...</td>\n",
+       "      <td>132208</td>\n",
+       "      <td>1782</td>\n",
+       "      <td>48763.52</td>\n",
+       "      <td>88.150920</td>\n",
+       "      <td>185.591626</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>250.14</td>\n",
+       "      <td>239.98</td>\n",
+       "      <td>203.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fev/03</td>\n",
+       "      <td>25.821429</td>\n",
+       "      <td>93602937</td>\n",
+       "      <td>393976058</td>\n",
+       "      <td>706788435</td>\n",
+       "      <td>815745074</td>\n",
+       "      <td>10280.61</td>\n",
+       "      <td>3.5908</td>\n",
+       "      <td>16.13919</td>\n",
+       "      <td>18.52597</td>\n",
+       "      <td>...</td>\n",
+       "      <td>141129</td>\n",
+       "      <td>1828</td>\n",
+       "      <td>51066.28</td>\n",
+       "      <td>120.281038</td>\n",
+       "      <td>161.759767</td>\n",
+       "      <td>103.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>250.13</td>\n",
+       "      <td>233.46</td>\n",
+       "      <td>206.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mar/03</td>\n",
+       "      <td>26.500000</td>\n",
+       "      <td>89822584</td>\n",
+       "      <td>388142457</td>\n",
+       "      <td>710712013</td>\n",
+       "      <td>820859498</td>\n",
+       "      <td>11273.63</td>\n",
+       "      <td>3.4469</td>\n",
+       "      <td>17.01632</td>\n",
+       "      <td>18.83303</td>\n",
+       "      <td>...</td>\n",
+       "      <td>127486</td>\n",
+       "      <td>1857</td>\n",
+       "      <td>51462.26</td>\n",
+       "      <td>133.688711</td>\n",
+       "      <td>224.647203</td>\n",
+       "      <td>101.9</td>\n",
+       "      <td>182585.2573</td>\n",
+       "      <td>248.06</td>\n",
+       "      <td>234.18</td>\n",
+       "      <td>202.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>abr/03</td>\n",
+       "      <td>26.500000</td>\n",
+       "      <td>87410599</td>\n",
+       "      <td>385467653</td>\n",
+       "      <td>712800120</td>\n",
+       "      <td>823489095</td>\n",
+       "      <td>12556.70</td>\n",
+       "      <td>3.1187</td>\n",
+       "      <td>17.41103</td>\n",
+       "      <td>19.39598</td>\n",
+       "      <td>...</td>\n",
+       "      <td>130783</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>55840.39</td>\n",
+       "      <td>96.791932</td>\n",
+       "      <td>176.579867</td>\n",
+       "      <td>107.7</td>\n",
+       "      <td>178958.1301</td>\n",
+       "      <td>247.57</td>\n",
+       "      <td>235.03</td>\n",
+       "      <td>204.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mai/03</td>\n",
+       "      <td>26.500000</td>\n",
+       "      <td>86231763</td>\n",
+       "      <td>388490690</td>\n",
+       "      <td>721321334</td>\n",
+       "      <td>833412205</td>\n",
+       "      <td>13421.60</td>\n",
+       "      <td>2.9557</td>\n",
+       "      <td>18.11273</td>\n",
+       "      <td>20.21480</td>\n",
+       "      <td>...</td>\n",
+       "      <td>141857</td>\n",
+       "      <td>2146</td>\n",
+       "      <td>57077.43</td>\n",
+       "      <td>85.230528</td>\n",
+       "      <td>122.309831</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>177284.6602</td>\n",
+       "      <td>250.48</td>\n",
+       "      <td>238.04</td>\n",
+       "      <td>206.54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    month      selic        m1         m2         m3         m4  ibovespa  \\\n",
+       "0  jan/03  25.145161  94977783  391237088  696054502  810272451  10941.09   \n",
+       "1  fev/03  25.821429  93602937  393976058  706788435  815745074  10280.61   \n",
+       "2  mar/03  26.500000  89822584  388142457  710712013  820859498  11273.63   \n",
+       "3  abr/03  26.500000  87410599  385467653  712800120  823489095  12556.70   \n",
+       "4  mai/03  26.500000  86231763  388490690  721321334  833412205  13421.60   \n",
+       "\n",
+       "   cambio  ind_varejo  ind_varejo_ampl  ...  prod_veiculos  prod_onibus  \\\n",
+       "0  3.4384    16.44619         18.88421  ...         132208         1782   \n",
+       "1  3.5908    16.13919         18.52597  ...         141129         1828   \n",
+       "2  3.4469    17.01632         18.83303  ...         127486         1857   \n",
+       "3  3.1187    17.41103         19.39598  ...         130783         2019   \n",
+       "4  2.9557    18.11273         20.21480  ...         141857         2146   \n",
+       "\n",
+       "   result_primario      epu_br     epu_usa  ind_conf_cons   rendimento  \\\n",
+       "0         48763.52   88.150920  185.591626          103.0          NaN   \n",
+       "1         51066.28  120.281038  161.759767          103.5          NaN   \n",
+       "2         51462.26  133.688711  224.647203          101.9  182585.2573   \n",
+       "3         55840.39   96.791932  176.579867          107.7  178958.1301   \n",
+       "4         57077.43   85.230528  122.309831          112.0  177284.6602   \n",
+       "\n",
+       "   crb_cmdt  crb_food  crb_metal  \n",
+       "0    250.14    239.98     203.34  \n",
+       "1    250.13    233.46     206.19  \n",
+       "2    248.06    234.18     202.43  \n",
+       "3    247.57    235.03     204.02  \n",
+       "4    250.48    238.04     206.54  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove colunas de séries que já são estacionárias\n",
+    "# segundo o teste KPSS no arquivo 'stationarity.ipynb'\n",
+    "dropped_df = df.drop(\n",
+    "    columns=[\n",
+    "        'ipca',\n",
+    "        'ipca_15',\n",
+    "        'cambio_real',\n",
+    "        'oil_usa',\n",
+    "        'oil_eu',\n",
+    "        'bens_capital',\n",
+    "        'prod_caminhoes',\n",
+    "        'el_nino',\n",
+    "        'desemprego',\n",
+    "    ]\n",
+    ")\n",
+    "dropped_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Transformação 1\n",
     "f = lambda df, i, col_name: df.loc[i, col_name] - df.loc[i - 1, col_name]\n",
-    "utils.save_tranformed_df(\"dados/delta.csv\", df, f)"
+    "delta_df = utils.transform_dataframe(dropped_df, f)\n",
+    "# Ignora meses anteriores a out/2003, pois a previsão começa em 2004\n",
+    "# e o maior lag vai ser 3\n",
+    "# Isso vai se repetir nos próximos arquivos pelo mesmo motivo\n",
+    "delta_df = delta_df.drop(['fev/03', 'mar/03', 'abr/03', 'mai/03', 'jun/03', 'jul/03', 'ago/03', 'set/03'])\n",
+    "delta_df.to_csv('dados/delta.csv', sep=\";\", decimal=\",\", index_label='month')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Transformação 2\n",
     "f = lambda df, i, col_name: (df.loc[i, col_name] - df.loc[i - 1, col_name]) - (df.loc[i - 1, col_name] - df.loc[i - 2, col_name])\n",
-    "utils.save_tranformed_df(\"dados/delta_quadrado.csv\", df, f, skip=[0, 1])"
+    "delta_quadrado_df = utils.transform_dataframe(dropped_df, f, skip=[0, 1])\n",
+    "delta_quadrado_df = delta_quadrado_df.drop(['mar/03', 'abr/03', 'mai/03', 'jun/03', 'jul/03', 'ago/03', 'set/03'])\n",
+    "delta_quadrado_df.to_csv('dados/delta_quadrado.csv', sep=\";\", decimal=\",\", index_label='month')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_20564\\3570741408.py:2: RuntimeWarning: divide by zero encountered in log\n",
-      "  f = lambda df, i, col_name: np.log(df.loc[i, col_name])\n",
-      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_20564\\3570741408.py:2: RuntimeWarning: invalid value encountered in log\n",
+      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_15388\\678695276.py:2: RuntimeWarning: invalid value encountered in log\n",
       "  f = lambda df, i, col_name: np.log(df.loc[i, col_name])\n"
      ]
     }
@@ -288,21 +525,21 @@
    "source": [
     "# Transformação 3\n",
     "f = lambda df, i, col_name: np.log(df.loc[i, col_name])\n",
-    "utils.save_tranformed_df(\"dados/log.csv\", df, f)"
+    "ln_df = utils.transform_dataframe(dropped_df, f, skip=[0, 1])\n",
+    "ln_df = ln_df.drop(['mar/03', 'abr/03', 'mai/03', 'jun/03', 'jul/03', 'ago/03', 'set/03'])\n",
+    "ln_df.to_csv('dados/log.csv', sep=\";\", decimal=\",\", index_label='month')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_20564\\814373823.py:2: RuntimeWarning: divide by zero encountered in log\n",
-      "  f = lambda df, i, col_name: np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name])\n",
-      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_20564\\814373823.py:2: RuntimeWarning: invalid value encountered in log\n",
+      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_15388\\3021156352.py:2: RuntimeWarning: invalid value encountered in log\n",
       "  f = lambda df, i, col_name: np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name])\n"
      ]
     }
@@ -310,21 +547,21 @@
    "source": [
     "# Tranformação 4\n",
     "f = lambda df, i, col_name: np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name])\n",
-    "utils.save_tranformed_df(\"dados/delta_log.csv\", df, f)"
+    "ln_delta_df = utils.transform_dataframe(dropped_df, f, skip=[0, 1])\n",
+    "ln_delta_df = ln_delta_df.drop(['mar/03', 'abr/03', 'mai/03', 'jun/03', 'jul/03', 'ago/03', 'set/03'])\n",
+    "ln_delta_df.to_csv('dados/delta_log.csv', sep=\";\", decimal=\",\", index_label='month')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_8528\\4120892083.py:2: RuntimeWarning: divide by zero encountered in log\n",
-      "  f = lambda df, i, col_name: (np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name])) - (np.log(df.loc[i - 1, col_name]) - np.log(df.loc[i - 2, col_name]))\n",
-      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_8528\\4120892083.py:2: RuntimeWarning: invalid value encountered in log\n",
+      "C:\\Users\\guisf\\AppData\\Local\\Temp\\ipykernel_15388\\3961766518.py:2: RuntimeWarning: invalid value encountered in log\n",
       "  f = lambda df, i, col_name: (np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name])) - (np.log(df.loc[i - 1, col_name]) - np.log(df.loc[i - 2, col_name]))\n"
      ]
     }
@@ -332,7 +569,9 @@
    "source": [
     "# Tranformação 5\n",
     "f = lambda df, i, col_name: (np.log(df.loc[i, col_name]) - np.log(df.loc[i - 1, col_name])) - (np.log(df.loc[i - 1, col_name]) - np.log(df.loc[i - 2, col_name]))\n",
-    "utils.save_tranformed_df(\"dados/delta_log_quadrado.csv\", df, f, skip=[0, 1])"
+    "ln_delta_quadrado_df = utils.transform_dataframe(dropped_df, f, skip=[0, 1])\n",
+    "ln_delta_quadrado_df = ln_delta_quadrado_df.drop(['mar/03', 'abr/03', 'mai/03', 'jun/03', 'jul/03', 'ago/03', 'set/03'])\n",
+    "ln_delta_quadrado_df.to_csv('dados/delta_log_quadrado.csv', sep=\";\", decimal=\",\", index_label='month')"
    ]
   },
   {
