Roda Random Forest, mas resultados são péssimos.

--- a/arima_forecast.ipynb
+++ b/arima_forecast.ipynb
@@ -28,6 +28,7 @@
     "from sktime.split import temporal_train_test_split, ExpandingWindowSplitter\n",
     "from sktime.forecasting.base import ForecastingHorizon\n",
     "from sktime.utils.plotting import plot_series\n",
+    "from sktime.utils import mlflow_sktime\n",
     "from sktime.performance_metrics.forecasting import mean_absolute_percentage_error as mape\n",
     "from sktime.performance_metrics.forecasting import mean_absolute_error as mae\n",
     "import pandas as pd\n",
@@ -1259,6 +1260,15 @@
    ],
    "source": [
     "forecaster.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Salva modelo\n"
    ]
   }
  ],
