Corrige erro. Previsões de modelos lineares não eram desnormalizadas para o cálculo das métricas de erro.

--- a/h1.ipynb
+++ b/h1.ipynb
@@ -1803,7 +1803,8 @@
     "        \n",
     "        y_train, y_test, y_pred = utils.evaluate_pipeline(forecaster, normalized_df, FORECASTING_HORIZON)\n",
     "        # Desnormaliza previsões\n",
-    "        preds[model] = y_pred * np.sqrt(scaler.var_[0]) + scaler.mean_[0]\n",
+    "        y_pred = y_pred * np.sqrt(scaler.var_[0]) + scaler.mean_[0]\n",
+    "        preds[model] = y_pred\n",
     "\n",
     "    else:\n",
     "        y_train, y_test, y_pred = utils.evaluate_pipeline(forecaster, df, FORECASTING_HORIZON)\n",
